--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,14 @@
         "ecommerce",
         "Ecommrce",
         "Headder",
+        "IITGROUP",
         "kanban",
         "Muthuhetti",
+        "newcalender",
         "pricebook",
         "richtexteditor",
         "Shopware",
+        "Sparkline",
         "syncfusion",
         "tailwindcss"
     ]
