--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "firebase": "^9.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
